{
    "name": "PlayerInputManager",
    "maps": [
        {
            "name": "Gameplay",
            "id": "f71678bd-03f9-4310-893a-808cb0e80b64",
            "actions": [
                {
                    "name": "MovementInput",
                    "type": "Value",
                    "id": "53faeefc-9152-4810-bae1-49c585d7e47b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpInput",
                    "type": "Button",
                    "id": "23fafd7e-a5a9-4e52-be40-b1e014d74f0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownInput",
                    "type": "Button",
                    "id": "0f589ccf-3329-4b36-9359-fce379c55173",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JumpInput",
                    "type": "Button",
                    "id": "2421e051-0ff1-4fcd-b6b4-0b05fcb6eb93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SlashInput",
                    "type": "Button",
                    "id": "873be9e9-284e-4ac6-84c3-d862e0d6beab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ProjectileInput",
                    "type": "Button",
                    "id": "f9426cc9-7f62-4bee-adc6-adf47ff43207",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MenuInput",
                    "type": "Button",
                    "id": "52fd1212-9c0b-4bf5-8af3-611d4cde016a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "432a74e1-30f8-4264-82a7-c6ddb8855870",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "59281441-109c-43dc-85b5-b53f6fff6ba8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b83c378a-d3e4-4980-924c-90a737c4012d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c774bb1e-534e-4ece-a805-fd2df2729671",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "697519f4-d129-4050-88d1-90e1c12e1afc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4c4346e-2887-4ffc-a8c9-6980e441fb56",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a308f387-96fc-4051-b379-cad7627627d1",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlashInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ead76a4-2165-4dc3-b3b5-f94d6ed3413a",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ProjectileInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efe10885-443f-47d4-8817-26d587eff011",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}